skiplang/compiler/invalid_tests/typechecking/always_inline_native.sk
@always_inline
@cpp_extern("SKIP_some_native")
native fun bodyless(): Int;

fun main(): void {
  print_string("x=" + bodyless())
}
